fixed html overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -17,6 +17,7 @@ a {
 
 html {
   width: 100vw;
+  overflow-x: hidden;
 }
 
 .App {
